fix: Color Picker Palette stacking up on small screens issue fixed.

--- a/inc/customizer/custom-controls/assets/css/unminified/color.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color.css
@@ -258,38 +258,8 @@
 	width: 27px;
     height: 27px;
 }
-@media (max-width: 1800px) {
-    .astra-palette-colors .components-button.astra-color-icon-indicate .component-color-indicator.astra-advanced-color-indicate {
-        width: 26px;
-        height: 26px;
-    }
-    .astra-palette-colors .astra-color-picker-wrap {
-        margin-left: 2px;
-    }
-    .astra-typography-control .typography-button-wrap > button.components-button.astra-typography-preview-indicate {
-        padding: 0 2px;
-    }
-    .astra-typography-control .typography-button-wrap > button.components-button {
-        padding: 0 4px;
-    }
-}
-@media (max-width: 1400px) {
-    .astra-palette-colors .components-button.astra-color-icon-indicate .component-color-indicator.astra-advanced-color-indicate {
-        width: 22px;
-        height: 22px;
-    }
-}
-.astra-palette-colors .astra-color-picker-wrap:first-child {
-    margin-left: 0;
-}
 .ast-color-palette .components-circular-option-picker__option-wrapper {
     margin-right: 6px;
-}
-.ast-field-settings-modal .astra-popover-color .ast-color-palette {
-	padding: 8px 0px 0px 7.5px;
-}
-.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option-wrapper {
-    margin-right: 5px;
 }
 /* Clear Button CSS */
 .ast-color-btn-clear-wrap {
@@ -304,7 +274,7 @@
 }
 .ast-clear-btn-inside-picker.components-button,
 .astra-popover-tabs .ast-clear-btn-inside-picker.components-button {
-	margin: 5px 20px 20px 20px;
+	margin: 5px 20px 20px 15px;
 	padding: 0 8px;
 }
 .ast-clear-btn-inside-picker {
@@ -359,6 +329,67 @@
 /** Gradient Color Picker */
 .customize-control .ast-gradient-color-picker input[type="number"] {
 	width: 50%;
+}
+/** Modal Color Picker - Group Param */
+.ast-field-settings-modal .astra-popover-color .ast-color-palette {
+	padding: 8px 0px 0px 13px;
+	margin-bottom: -8px;
+}
+.ast-field-settings-modal .astra-popover-color .ast-color-palette .components-circular-option-picker__option-wrapper {
+    margin-right: 5px;
+}
+.ast-field-settings-modal .components-circular-option-picker__option-wrapper .components-circular-option-picker__option:focus::after {
+	width: 24px;
+    height: 24px;
+}
+.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option-wrapper {
+	height: 25px;
+	width: 25px;
+}
+.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option.is-pressed + svg {
+	left: 2.5px;
+	top: 0px;
+	width: 20px;
+}
+@media (max-width: 1845px) {
+    /** Responsive Devices - Compatibility CSS */
+    .ast-color-palette .components-circular-option-picker__option-wrapper {
+        height: 25px;
+        width: 25px;
+    }
+    .ast-color-palette .components-circular-option-picker__option.is-pressed + svg {
+        width: 18px;
+        left: 4px;
+        top: 1px;
+    }
+    .ast-color-palette .components-circular-option-picker__option-wrapper .components-circular-option-picker__option:focus::after {
+        width: 24px;
+        height: 24px;
+    }
+    .astra-popover-color .ast-color-palette.components-circular-option-picker {
+        width: auto;
+        padding: 16px 0px 0px 12px;
+    }
+    .astra-typography-control .typography-button-wrap > button.components-button.astra-typography-preview-indicate {
+        padding: 0 2px;
+    }
+    .astra-typography-control .typography-button-wrap > button.components-button {
+        padding: 0 4px;
+	}
+	/** Modal Popup */
+	.ast-field-settings-modal .components-circular-option-picker__option-wrapper .components-circular-option-picker__option:focus::after {
+		width: 21px;
+		height: 21px;
+	}
+	.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option-wrapper {
+		height: 22px;
+		width: 22px;
+	}
+	.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option.is-pressed + svg {
+		left: 2.5px;
+		top: -1px;
+		width: 18px;
+	}
 }
 @-moz-document url-prefix() {
 	.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option-wrapper {
